refactor: replace deprecated Boolean constructor with valueOf method